.vimrc增加 go 语言高亮以及语法检查插件;tmux 增加跳转连接以及打开文件的插件

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -50,7 +50,11 @@ setw -g mode-keys vi
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-
+# 可以将 tmux 中出现的链接全部列出，然后跳转
+## 使用 ctrl-b + u 显示链接列表，然后 ctrl 上下键选择，回车,再回车确定即可
+set -g @plugin 'tmux-plugins/tmux-urlview'
+# 使用系统默认的程序打开文件
+set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-cpu'
 
