调整 .tmux.conf 中状态栏显示

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,11 +9,11 @@ if-shell '[[ `tmux -V | cut -d" " -f2` == 2.1 ]] || [[ `tmux -V | cut -d" " -f2`
 # 设置状态栏左部宽度
 set -g status-left-length 40
 # 设置状态栏显示内容和内容颜色。这里配置从左边开始显示，使用绿色显示session名称，黄色显示窗口号，蓝色显示窗口分割号
-set -g status-left "#[fg=colour52]#S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=blue]#S #[fg=yellow]#I #[fg=cyan]#P"
 # 设置状态栏右部宽度
-set -g status-right-length 80
-# 设置状态栏右边内容，这里设置为时间信息
-set -g status-right 'CPU:#{cpu_percentage} | Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+set -g status-right-length 110
+# 设置状态栏右边内容，这里设置为内存使用信息、cpu 使用信息、系统的平均负载，电池信息以及时间信息
+set -g status-right '#[fg=green]#($TMUX_PLUGIN_MANAGER_PATH/tmux-mem-cpu-load/tmux-mem-cpu-load --colors --powerline-right --interval 2)#[default] | Battery: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 # 窗口信息居中显示
 set -g status-justify centre
  
@@ -56,7 +56,8 @@ set -g @plugin 'tmux-plugins/tmux-urlview'
 # 使用系统默认的程序打开文件
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'tmux-plugins/tmux-cpu'
+#set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # Other examples:
 # github_username/plugin_name    \
@@ -66,7 +67,6 @@ set -g @plugin 'tmux-plugins/tmux-cpu'
 # Initializes TMUlugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run '~/.tmux/plugins/tpm/tpm'
-
 
 #### COLOUR (Solarized dark)
 
