--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,7 +9,7 @@ if-shell '[[ `tmux -V | cut -d" " -f2` == 2.1 ]] || [[ `tmux -V | cut -d" " -f2`
 # 设置状态栏左部宽度
 set -g status-left-length 40
 # 设置状态栏显示内容和内容颜色。这里配置从左边开始显示，使用绿色显示session名称，黄色显示窗口号，蓝色显示窗口分割号
-set -g status-left "#[fg=blue]#S #[fg=yellow]#I #[fg=cyan]#P"
+set -g status-left "#[fg=white]小闫同学 #[fg=blue]#S #[fg=yellow]#I #[fg=cyan]#P"
 # 设置状态栏右部宽度
 set -g status-right-length 110
 # 设置状态栏右边内容，这里设置为内存使用信息、cpu 使用信息、系统的平均负载，电池信息以及时间信息
@@ -56,7 +56,7 @@ set -g @plugin 'tmux-plugins/tmux-urlview'
 # 使用系统默认的程序打开文件
 set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'tmux-plugins/tmux-battery'
-#set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'thewtex/tmux-mem-cpu-load'
 
 # Other examples:
